--- a/package.json
+++ b/package.json
@@ -5,9 +5,10 @@
   "main": "index.js",
   "type":"module",
   "scripts": {
-    "backend": "nodemon Backend/index.js",
+    "start": "nodemon Backend/index.js",
     "frontend":"npm run dev --prefix frontend",
-    "dev":"concurrently \"npm run frontend\" \"npm run backend\""
+    "dev":"concurrently \"npm run frontend\" \"npm run backend\"",
+    "build": "npm install && npm install --prefix Frontend && npm run build --prefix Frontend"
   },
   "keywords": [],
   "author": "",
